--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
     <li> Liderança </li>
     <li> Proatividade </li>
     <Li> Capacidade de se adaptar as mudanças </Li>
+
+    <hr>
+
+    <h3>Projetos PWEB</h3>
+    <a href="https://joseadolfo10.github.io/forms/">Formulário</a>
+    <a href="https://joseadolfo10.github.io/sumario/">Sumário</a>
+    <a href="https://joseadolfo10.github.io/musica/">Música</a>
+    <a href="https://joseadolfo10.github.io/tabela/">Tabela</a>
+    <a href="https://joseadolfo10.github.io/iframe/">iFrame</a>
 </body>
 
 </html>
