--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
     <a href="https://joseadolfo10.github.io/tabela/">Tabela</a>
     <br>
     <a href="https://joseadolfo10.github.io/iframe/">iFrame</a>
+    <a href="https://joseadolfo10.github.io/posicionamentos/">posicionamentos</a>
+    <br>
 </body>
 
 </html>
