--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
     <br>
     <a href="https://joseadolfo10.github.io/posicionamentos/">posicionamentos</a>
     <br>
+    <a href="https://joseadolfo10.github.io/cadastro/">cadastro</a>
+    <br>
 </body>
 
 </html>
