--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <br>
     <a href="https://joseadolfo10.github.io/iframe/">iFrame</a>
     <br>
-    <a href="https://joseadolfo10.github.io/posicionamentos/">posicionamentos</a>
+    <a href="https://joseadolfo10.github.io/posicionamento/">posicionamento</a>
     <br>
     <a href="https://joseadolfo10.github.io/cadastro/">cadastro</a>
     <br>
