--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
     <br>
     <a href="https://joseadolfo10.github.io/cadastro/">cadastro</a>
     <br>
+    <br>
+    <a href="https://joseadolfo10.github.io/homenagem/">homenagem</a>
+    <br>
+    <br>
+    <a href="https://joseadolfo10.github.io/google/">google</a>
+    <br>
+    <br>
+    <a href="https://joseadolfo10.github.io/survey-form/">survey form</a>
 </body>
 
 </html>
