--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <br>
     <a href="https://joseadolfo10.github.io/survey-form/">survey form</a>
     <br>
-    <a href="https://joseadolfo10.github.io/dispocisão/">disposição</a>
+    <a href="https://joseadolfo10.github.io/layout/"layout</a>
 </body>
 
 </html>
