--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <br>
     <a href="https://joseadolfo10.github.io/brasileirao/">brasileirao</a>
     <br>
-    <a href="https://joseadolfo10.github.io/resposive/">resposive</a>
+    <a href="https://joseadolfo10.github.io/responsive/">responsive</a>
 </body>
 
 </html>
