--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         width: 100%;
         height: 100%;
         margin: 0;
-        color:white;
+        color:blue;
         background: linear-gradient(to right, white 50%, black 50%);
         background-repeat: no-repeat;
         cursor:default;
