--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             <h3 class="meu-nome-header">José Adolfo</h3>
         </div>
         <div class="text-esquerda-header">
-            <a href="./sobre.html" class="texto-direta-header-header" target="_blank"><p>Sobre</p></a>
+            <a href="
+                sobre.html" class="texto-direta-header-header" target="_blank"><p>Sobre</p></a>
             <a href="https://joseadolfo10.github.io/projetos/" class="texto-direta-header-header" target="_blank"><p>Projetos</p></a>
         </div>
     </header>
